Replace LSP Usages with Fuzzy + LLM Usages (#1246)
* Implements the suggested solution for usages from #1186 
* Modifies the API for IAnalyzer to provide imports, the project, and an enclosing code unit given a project file and range.
* RelevanceClassifier includes a 0-1 based scoring API to mirror the binary relevance. Added a batched variant to reduce number of calls to LLM and latency in general. This is used by default with a new environment variable, `BRK_USAGE_BOOL`, to opt for boolean-based scoring on relevance classification.
* Refactored SearchTool::substringSearch core functionality to allow it to be called as a static function
* Fuzzy matcher can be instantiated from a context manager, and applied for all languages
* Set current usage limit to 100 max files and 1000 max usages, which means filtering 1000 code units after usages retrieved. Also if more than 100 files come in then we "bail". There are usually quite a few usages per file.